overflow styling fixes

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -43,7 +43,6 @@
   align-items: center;
   flex-wrap: wrap;
   height: 85%;
-  overflow: scroll;
 }
 
 .appWrapper {
