--- a/src/app/components/BeerSearch/BeerSearch.scss
+++ b/src/app/components/BeerSearch/BeerSearch.scss
@@ -30,7 +30,7 @@
   -webkit-box-shadow: 0px 9px 27px 0px rgba(0,0,0,0.37);
   -moz-box-shadow: 0px 9px 27px 0px rgba(0,0,0,0.37);
   box-shadow: 0px 9px 27px 0px rgba(0,0,0,0.37);
-  overflow: scroll;
+  overflow: hidden;
   border: none;
   @media (max-width: 767px) {
     height: 500px;
